# rust-js-ecosystem

./: Cargo.toml
.github/workflows/: ci.yml
crates/module-graph/: Cargo.toml  README.md
crates/module-graph/src/: atom.rs  lib.rs  main.rs  module.rs  module_graph.rs  module_graph_error.rs  module_type.rs
crates/module-graph/src/css/: css_error.rs  mod.rs
crates/module-graph/src/dummy/: mod.rs
crates/module-graph/src/js/: js_error.rs  mod.rs  stats.rs  visit_imports_exports.rs
crates/module-graph/src/json/: mod.rs
crates/module-graph/src/media/: mod.rs
crates/module-graph/src/text/: mod.rs
crates/module-graph/src/types/: javascript.rs  media.rs  mod.rs
crates/module-graph/src/yaml/: mod.rs
crates/module-graph/tests/: css_test.rs  js_test.rs  json_test.rs  text_test.rs  ts_test.rs  utils.rs  yaml_test.rs
crates/module-graph/tests/__fixtures__/css/: styles.css  styles.module.css  utils.module.css
crates/module-graph/tests/__fixtures__/files/: css.css  imports.mjs  javascript.mjs  json-object.json
crates/module-graph/tests/__fixtures__/js/cjs/: dyn-import-patterns.cjs  exports-named-scopes.cjs  exports-named.cjs  module-exports-class.cjs  module-exports-ref.cjs  require-scopes.cjs  require.cjs  shared-def-object.cjs  shared.cjs
crates/module-graph/tests/__fixtures__/js/mjs/: dyn-import-patterns.mjs  dyn-import-scopes.mjs  dyn-import-tla.mjs  export-def-ref.mjs  export-named.mjs  export-star.mjs  exports.mjs  import-def.mjs  import-named.mjs  import-star.mjs  shared-def-object.mjs  shared.mjs
crates/module-graph/tests/__fixtures__/js/ts/: dyn-import-patterns.ts  dyn-import-scopes.ts  dyn-import-tla.ts  export-def-enum.ts  export-named.ts  export-star.ts  import-def.ts  import-named.ts  import-star.ts  shared.ts
crates/module-graph/tests/__fixtures__/json/: object.json5
crates/module-graph/tests/__fixtures__/text/: graphql.gql  index.html  source.js.map  styles.styl
crates/module-graph/tests/__fixtures__/yaml/: object.yaml  object.yml
crates/module-graph/tests/snapshots/: css_test__css__modules.snap  css_test__css__normal.snap  js_test__cjs__dynamic_import.snap  js_test__cjs__exports_named.snap  js_test__cjs__exports_named_scopes.snap  js_test__cjs__module_exports.snap  js_test__cjs__module_exports_class.snap  js_test__cjs__module_exports_func.snap  js_test__cjs__module_exports_ref.snap  js_test__cjs__require.snap  js_test__cjs__require_scopes.snap  js_test__mjs__dynamic_import_destructure_patterns.snap  js_test__mjs__dynamic_import_scope_depths.snap  js_test__mjs__dynamic_import_top_level_await.snap  js_test__mjs__export_default_class-2.snap  js_test__mjs__export_default_class.snap  js_test__mjs__export_default_function-2.snap  js_test__mjs__export_default_function.snap  js_test__mjs__export_default_reference.snap  js_test__mjs__export_named.snap  js_test__mjs__export_star.snap  js_test__mjs__import_default.snap  js_test__mjs__import_named.snap  js_test__mjs__import_star.snap  js_test__mjs__normal_exports.snap  json_test__json__array.snap  json_test__json__object.snap  json_test__json__primitive.snap  text_test__text__graphql.snap  text_test__text__graphql_alt_extension.snap  text_test__text__html.snap  text_test__text__less.snap  text_test__text__map.snap  text_test__text__sass.snap  text_test__text__scss.snap  text_test__text__stylus.snap  text_test__text__svg.snap  ts_test__ts__dynamic_import_destructure_patterns.snap  ts_test__ts__dynamic_import_scope_depths.snap  ts_test__ts__dynamic_import_top_level_await.snap  (+15 more)
crates/package-graph/: Cargo.toml
crates/package-graph/src/: lib.rs  package.rs  package_graph.rs  package_graph_error.rs
crates/package-graph/tests/: package_graph_test.rs
crates/package-graph/tests/__fixtures__/graph-mono-pnpm/app/: package.json
crates/package-graph/tests/__fixtures__/graph-mono-yarn/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/file/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/link/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/optional-deps/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/peer-deps/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/portal/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/ver/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/ver-req/: package.json
crates/package-graph/tests/__fixtures__/graph-protocols/ws-caret-alias/: package.json
crates/package-graph/tests/snapshots/: package_graph_test__monorepo_npm__loads_all_packages.snap  package_graph_test__polyrepo__loads_the_root_package.snap
crates/package-json/: Cargo.toml
crates/package-json/src/: import_export.rs  lib.rs  package_json.rs
crates/package-json/src/protocols/: mod.rs  version.rs  workspace.rs
crates/package-json/tests/: package_json_test.rs  version_protocol_test.rs  workspace_protocol_test.rs
crates/package-managers/: Cargo.toml
crates/package-managers/src/: bun.rs  lib.rs  npm.rs  pnpm.rs  yarn.rs
crates/tsbuildinfo/: Cargo.toml
crates/tsbuildinfo/src/: legend_json.rs  lib.rs  trace_json.rs  tsbuildinfo.rs  types_json.rs
crates/tsbuildinfo/tests/: tsbuildinfo_test.rs
crates/tsbuildinfo/tests/__fixtures__/files/: 5.x.json
crates/tsconfig-json/: Cargo.toml
crates/tsconfig-json/src/: compiler_options.rs  lib.rs  path_types.rs  tsconfig_json.rs
crates/tsconfig-json/tests/: compiler_options_test.rs  tsconfig_json_test.rs
docs/: rfc-vite-monorepo.md
src/: lib.rs
src/package/: mod.rs  package.rs  package_graph.rs  package_json.rs  package_manager.rs  pnpm_configs.rs  version_protocol.rs  workspace_protocol.rs
tests/: package_graph_test.rs  version_protocol_test.rs  workspace_protocol_test.rs
tests/__fixtures__/graph-mono-npm/app/: package.json
tests/__fixtures__/graph-mono-yarn/ignored/: package.json
tests/snapshots/: package_graph_test__monorepo_pnpm__loads_all_packages.snap  package_graph_test__polyrepo__loads_the_root_package.snap
(+8 files in other folders)
