[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
clean-path = "0.2.1"
indexmap = "2.2.5"
miette = "7.0.0"
once_cell = "1.19.0"
petgraph = { version = "0.6.4", default-features = false, features = [
	"serde-1",
] }
regex = "1.10.3"
rustc-hash = "1.1.0"
semver = "1.0.22"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
starbase_sandbox = "0.4.0"
starbase_utils = { version = "0.5.0", default-features = false }
thiserror = "1.0.57"
