[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
once_cell = "^1"
regex = { version = "^1", default-features = false }
semver = "^1"
serde = "^1"
serde_json = "^1"
thiserror = "^1"

clean-path = "0.2.1"
indexmap = "2.2.5"
miette = "7.0.0"
petgraph = { version = "0.6.4", default-features = false, features = [
    "serde-1",
] }
rustc-hash = "1.1.0"
serde_yaml = "0.9.32"
starbase_sandbox = "0.5.0"
starbase_utils = { version = "0.6.0", default-features = false }
