[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
regex = { version = "^1", default-features = false }
semver = "^1"
serde = "^1"
serde_json = "^1"
thiserror = "^1"

clean-path = "0.2.1"
indexmap = "2.4.0"
miette = "7.2.0"
petgraph = { version = "0.6.5", default-features = false, features = [
    "serde-1",
] }
rustc-hash = "2.0.0"
serde_yaml = "0.9.34"
starbase_sandbox = "0.7.2"
starbase_utils = { version = "0.8.7", default-features = false }
