[package]
name = "node_module_graph"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "test_mg"
path = "src/main.rs"

[dependencies]
nodejs_package_json = { version = "0.1.1", path = "../package-json" }
clean-path = { workspace = true }
lightningcss = "1.0.0-alpha.53"
mediatype = "0.19.18"
oxc = "0.7.0"
oxc_resolver = "1.5.1"
petgraph = { workspace = true, features = ["graphmap"] }
starbase_utils = { workspace = true, features = ["json", "yaml"] }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
