[package]
name = "nodejs_module_graph"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
nodejs_package_json = { version = "0.2.0", path = "../package-json" }
clean-path = { workspace = true }
indexmap = { workspace = true }
lightningcss = "1.0.0-alpha.54"
oxc = "0.7.0"
oxc_resolver = "1.6.0"
petgraph = { workspace = true, features = ["graphmap"] }
starbase_utils = { workspace = true, features = ["json", "yaml"] }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
