[package]
name = "node_package_graph"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
node_package_json = { version = "0.0.1", path = "../package-json", features = [
	"protocols",
] }
node_package_managers = { version = "0.0.1", path = "../package-managers" }
clean-path = "0.2.1"
miette = { workspace = true, optional = true }
petgraph = { workspace = true }
starbase_utils = { workspace = true, features = ["glob", "json", "yaml"] }
thiserror = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }

[features]
default = []
miette = ["dep:miette", "node_package_json/miette", "starbase_utils/miette"]
