[package]
name = "nodejs_package_graph"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A workspace-based package graph for Node.js packages."
repository = "https://github.com/milesj/rust-js-ecosystem"

[dependencies]
nodejs_package_json = { version = "0.3.0", path = "../package-json", features = [
	"protocols",
] }
nodejs_package_managers = { version = "0.2.0", path = "../package-managers" }
clean-path = { workspace = true }
miette = { workspace = true, optional = true }
petgraph = { workspace = true }
starbase_utils = { workspace = true, features = ["glob", "json", "yaml"] }
thiserror = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }

[features]
default = []
miette = ["dep:miette", "nodejs_package_json/miette", "starbase_utils/miette"]
