[package]
name = "nodejs_package_json"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Shapes for Node.js package.json."
repository = "https://github.com/rolldown-rs/js-ts-crates"

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
miette = { workspace = true, optional = true }
rustc-hash = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# protocols
once_cell = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[dev-dependencies]
nodejs_package_json = { path = ".", features = ["protocols"] }

[features]
default = []
miette = ["dep:miette"]
protocols = ["dep:once_cell", "dep:regex"]
serialize = []
