[package]
name = "node_package_managers"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
package-lock-json-parser = "0.4.0"
rustc-hash = { workspace = true }
serde = { workspace = true }
yarn-lock-parser = "0.6.0"

# loader
miette = { workspace = true, optional = true }
starbase_utils = { workspace = true, optional = true, features = ["yaml"] }

[features]
default = []
loader = ["miette", "dep:starbase_utils"]
miette = ["dep:miette"]
