[package]
name = "nodejs_package_managers"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Helpers for npm, pnpm, yarn, and bun package managers."
repository = "https://github.com/milesj/rust-js-ecosystem"

[dependencies]
package-lock-json-parser = "0.4.0"
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
yarn-lock-parser = "0.7.0"

[features]
default = []
