[package]
name = "typescript_tsbuildinfo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shapes for TypeScript tsconfig.json."
repository = "https://github.com/milesj/rust-js-ecosystem"

[dependencies]
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
typescript_tsbuildinfo = { path = ".", features = ["serialize"] }
starbase_sandbox = { workspace = true }

[features]
default = []
serialize = []
