[package]
name = "typescript_tsconfig_json"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Shapes for TypeScript tsconfig.json."
repository = "https://github.com/milesj/rust-js-ecosystem"

[dependencies]
clean-path = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
typescript_tsconfig_json = { path = ".", features = ["serialize"] }
starbase_sandbox = { workspace = true }

[features]
default = []
serialize = []
